--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.5",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "moment-timezone": "^0.5.39",
     "next": "^13",
     "react": "^18.2",
     "react-dom": "^18.2.0"
