--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@crossmint/client-sdk-react-ui": "^0.2.1-alpha.0",
+    "@metaplex-foundation/js": "^0.18.0",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-react": "^0.15.24",
     "@solana/wallet-adapter-react-ui": "^0.9.22",
     "@solana/wallet-adapter-wallets": "^0.19.5",
